--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cssa-url-completer",
+  "name": "@rsandfield/cssa-url-completer",
   "version": "1.0.1",
   "description": "Node module providing URL completion using data from the CSSA-Coordinator service.",
   "main": "app.js",
