--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/rsandfield/CSSA-Core#readme",
   "dependencies": {
-    "axios": "^0.23.0"
+    "axios": "^0.23.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
