--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/rsandfield/CSSA-Core#readme",
   "dependencies": {
     "axios": "^0.23.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
