--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,5 @@ jobs:
         run: npm ci
       - run: npm run build --if-present
       - run: npm test
+        env:
+          coordinatorSecret: "${{ secrets.coordinatorSecret }}"
