--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Node.js Package
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   publish-gpr:
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-          scope: '@YOUR_USERNAME'
+          scope: '@rsandfield'
       - run: npm install
       - run: npm publish
         env:
