--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,4 @@ jobs:
       - run: npm test
         env:
           coordinatorSecret: "${{ secrets.coordinatorSecret }}"
-          dev: true
+          env: 'dev'
