--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
   "dependencies": {
     "axios": "^0.23.0",
     "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
-    "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "chai-http": "^4.3.0",
     "mocha": "^9.1.3",
     "nock": "^13.1.4",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "rewire": "^5.0.0"
   }
 }
